Bug 549531 - fix strict aliasing warnings about scopeChain (also clean trailing whitespace; r=dmandelin).